--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,8 @@
 *.log
 *.pot
 *.pyc
-__pycache__/
-local_settings.py
+snakeai/__pycache__/
+snakeai/settings.py
 db.sqlite3
 db.sqlite3-journal
 media
