--- a/.gitignore
+++ b/.gitignore
@@ -272,3 +272,6 @@ poetry.toml
 pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/python,django,cuda
+
+# linkedin updates
+linkedin/
