Small change to gitignore for hidden files

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Created by https://www.toptal.com/developers/gitignore/api/python,django,cuda
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,django,cuda
+# Hidden files
+.*
 
 ### CUDA ###
 *.i
